name:                app
version:             0.1.0.0
synopsis:            À nos soignants
description:         A golden book
homepage:            https://github.com/dmjio/scotty-starter
license:             GNU Affero General Public License v3.0
author:              Bertrand Junqua
maintainer:          your.name@gmail.com
copyright:           Bertrand (c) 2020
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  other-modules:       Controllers.Messages
  build-depends:       base >=4.3.1,
                       wai-extra >=3.0.0,
                       wai-middleware-static,
                       scotty,
                       clay,
                       text,
                       blaze-html,
                       blaze-markup,
                       aeson
  default-language:    Haskell2010

source-repository head
   type: git
   location: https://github.com/scotty-web/scotty-starter
